--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ env.sh
 tests/listener_tests/contours
 tests/listener_tests/saved_alerts
 tests/listener_tests/skymaps
+src/gwtm_cron/gwtm_listener/gal_catalog_config.ini
